# land-calc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  list.txt  test.json  todo.md
.github/workflows/: rust.yml
src/: bulk_files.rs  card.rs  main.rs  search.rs
