[package]
name = "land-calc"
license = "MIT"
description = "This app reads a list of mtg cards from 'list.txt', searches scryfall.com to validate them, and figures out how many lands you need."
categories = ["mathematics"]
keywords = ["magic", "MTG", "cards", "calculator", "lands"]
readme = "README.md"
version = "0.1.1"
authors = ["Pyro <locoman.bh@gmail.com>"]
repository = "https://github.com/MoistPyro/land-calc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.11.26", features = ["json"] }
futures = "0.3.30"

[build-dependencies]
slint-build = "1.3.0"
